--- a/app/views/discipleships/edit.html.erb
+++ b/app/views/discipleships/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Discipleship</h1>
-
+<%@texto= 'Editar discupulado'%>
 <%= render 'form', discipleship: @discipleship %>
 
-<%= link_to 'Show', @discipleship %> |
-<%= link_to 'Back', discipleships_path %>
