--- a/app/views/discipleships/index.html.erb
+++ b/app/views/discipleships/index.html.erb
@@ -1,37 +1,43 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Discipulados</h1><div class="row">
-    
-
-
- 
-          
-<table>
-  <thead>
-    <tr>
-      <th>Nombre</th>
-      <th>Rangootorgado</th>
-      <th>Descripcion</th>
-      <th>Descripcionpacto</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @discipleships.each do |discipleship| %>
-      <tr>
-        <td><%= discipleship.nombre %></td>
-        <td><%= discipleship.rangoOtorgado %></td>
-        <td><%= discipleship.descripcion %></td>
-        <td><%= discipleship.descripcionPacto %></td>
-        <td><%= link_to 'Show', discipleship %></td>
-        <td><%= link_to 'Edit', edit_discipleship_path(discipleship) %></td>
-        <td><%= link_to 'Destroy', discipleship, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+<div class="fixed-action-btn no-autoinit">
+  <a class="btn-floating btn-large red">
+    <i class="large material-icons">mode_edit</i>
+  </a>
+  <ul>
+    <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+    <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+    <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+    <li><a href="/discipleships/new" class="btn-floating blue"><i class="material-icons">add</i></a></li>
+  </ul>
+</div>
+<div class="grey lighten-5" style="height: 100%;">    
+  <div class="container">
+    <div class="row center-xs " >
+      <% @discipleships.each do |discipulado| %>
+        <div class="col-xs-12
+                    col-sm-8
+                    col-md-6
+                    col-lg-4 ">
+          <div class="box">
+            <div class="card z-depth-3">
+              <div class="card-content black-text">
+                <span class="card-title center-xs"><%=discipulado.nombre%></span>
+                <p><%=discipulado.descripcion%></p>
+                <div class="actions center">
+                  <%= link_to  "Ver detalles", discipulado, class: "waves-effect waves-teal btn-flat green-text" %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      <%end%>
+    </div>
+  </div>   
+</div>
 <br>
 
-<%= link_to 'New Discipleship', new_discipleship_path %>
+<script>
+$(document).ready(function(){
+    $('.fixed-action-btn').floatingActionButton();
+  });
+
+</script>
