--- a/app/views/discipleships/new.html.erb
+++ b/app/views/discipleships/new.html.erb
@@ -1,5 +1,3 @@
-<h1>Nuevo discipulado</h1>
-
+<%@texto= 'Nuevo discipulado'%>
 <%= render 'form', discipleship: @discipleship %>
 
-<%= link_to 'Back', discipleships_path %>
