--- a/app/views/discipleships/show.html.erb
+++ b/app/views/discipleships/show.html.erb
@@ -1,24 +1,31 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Nombre:</strong>
-  <%= @discipleship.nombre %>
-</p>
-
-<p>
-  <strong>Rangootorgado:</strong>
-  <%= @discipleship.rangoOtorgado %>
-</p>
-
-<p>
-  <strong>Descripcion:</strong>
-  <%= @discipleship.descripcion %>
-</p>
-
-<p>
-  <strong>Descripcionpacto:</strong>
-  <%= @discipleship.descripcionPacto %>
-</p>
-
-<%= link_to 'Edit', edit_discipleship_path(@discipleship) %> |
-<%= link_to 'Back', discipleships_path %>
+<div class="row grey lighten-5 middle-xs no-margin" style="height: 80%;">    
+  <div class="container">
+    <div class="row center-xs" >
+      
+        <div class="col-xs-12
+                    col-sm-8
+                    col-md-6
+                    col-lg-6 ">
+          <div class="box">
+            <div class="card z-depth-3">
+              <div class="card-content black-text start-xs">
+                <span class="card-title center"><%=@discipleship.nombre%></span>
+                <b>Descripcion: </b><p><%=@discipleship.descripcion%></p>
+                <b>Rango otorgado: </b><p><%=@discipleship.rangoOtorgado%></p>
+                <b>Pacto asociado: </b><p>Pacto de compromiso</p>
+                <b>Descripcion del convenio: </b><p><%=@discipleship.descripcionPacto%></p>
+                <div class="actions center">
+                  <%= link_to  "Crear grupo", new_discipleship_group_path(@discipleship,@group), class: "waves-effect waves-teal btn-flat green-text" %>                
+                  <%= link_to  "Volver", discipleships_path, class: "waves-effect waves-teal btn-flat green-text" %>                
+                  <%= link_to  "Editar", edit_discipleship_path, class: "waves-effect waves-teal btn-flat green-text" %>
+                  <%= link_to  "Eliminar", @discipleship, data: { confirm: 'Esta seguro?' },class: "waves-effect waves-teal btn-flat green-text", method: :delete %>
+                  
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      
+    </div>
+  </div>   
+</div>
