--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,15 +1,50 @@
-<%= form_with(model: group, local: true) do |form| %>
-  <% if group.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(group.errors.count, "error") %> prohibited this group from being saved:</h2>
+<div class="row middle-xs no-margin">
+  <div class="container ">
+    <div class="row center-xs">
+        <div class=" col-xs-12 col-sm-8 col-md-6 col-lg-6">
+            <div class="card z-depth-3">
+                <div class="card-content ">
+                    <span class="card-title"><%=@texto%></span>
+                    
+                    <%= form_for([:discipleship,@group], local: true) do |f| %>
+                      <div class="row around-xs">
+                          
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                          <div class="box">                               
+                            <div class="input-field">
+                              <i class="material-icons prefix">border_color</i>
+                              <%= f.label :nombre , "Nombre"%>
+                              <%= f.text_field :nombre, id: :group_nombre %>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                          <div class="box">                               
+                            <div class="input-field">
+                              <%= f.collection_select(:teacher_id, User.joins(:teacher), :id, :primerNombre,options = {prompt: "Seleccione"} ) %>
+                              <%= f.label :teacher_id , "Nombre docente"%>
+                              
+                            </div>
+                          </div>
+                        </div>
 
-      <ul>
-      <% group.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+                        
+                            
+                      </div>
+                      <div class="actions ">
+                        <%= link_to 'Volver', discipleship_groups_path , class: "btn  waves-light   "%>
+                        <%= f.submit "Aceptar",class: "btn  waves-light  " %>
+                        <br><br>   
+                      </div>
+                    <%end%>
+                </div>
+            </div>
+        </div>
     </div>
-  <% end %>
+</div>
+
+<%= form_for([:discipleship,@group], local: true) do |form| %>
+  
 
   <div class="field">
     <%= form.label :nombre %>
