--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,56 +3,96 @@
   <head>
     <title>GranComision</title>
     <%= csrf_meta_tags %>
-    
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>            
     
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    
     
   </head>
 
   <body>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
-    <div class="navbar-fixed">
-     <nav class="white ">
-        <div class="nav-wrapper">
-          <a href="/" class="brand-logo center"><%= image_tag "logoGranComision.png", class: "circle logo-img" %></a>
-          <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons  green-text" >menu</i></a>
-          <ul class="right hide-on-med-and-down negro-text">
-            <li><a href="sass.html" class="green-text">sobre nostros</a></li>
-            <li><a href="badges.html" class="green-text">opcion2</a></li>
-            <li><a href="collapsible.html" class="green-text">opcion3</a></li>
-            <li><a href="mobile.html" class="green-text">opcion4</a></li>   
-            <%if user_signed_in?%>
-            <%=link_to "Cerrar sesion", destroy_user_session_path, class: "btn waves-effect waves-light ", method: :delete %>
-            <%else%>
-            <li><%= link_to "Iniciar",new_user_session_path ,class: "btn waves-light margen-boton"%></li>        
-            <li><%= link_to "Registrarme",new_user_registration_path ,class: "btn waves-light margen-boton"%></li>                
-            <%end%>
-          </ul>
-        </div>
-      </nav>
-    </div>
+    <header>
+      <div class="navbar-fixed">
+        <nav class="white green-text">
+          <div class="nav-wrapper">
+            <a href="/" class="brand-logo center"><%= image_tag "logoGranComision.png", class: "circle logo-img" %></a>
+            <a href="" data-target="mobile-demo" class="sidenav-trigger no-autoinit" id="abrir"><i class="material-icons  green-text" >menu</i></a>
+            <ul class="right hide-on-med-and-down negro-text">
+              
+              <%if user_signed_in?%>
 
-  <ul class="sidenav" id="mobile-demo">
-    <br>
-    <%if user_signed_in?%>
-    <li class="center-xs"><%= image_tag "avatar.png", class: "circle logo-img" %></li>
-    <%end%>
-    <li><a href="sass.html">sobre nosostros</a></li>
-    <li><a href="badges.html">opcion2</a></li>
-    <li><a href="collapsible.html">opcion3</a></li>
-    <li><a href="mobile.html">opcion4</a></li>
-    <%if user_signed_in?%>    
-    <%=link_to "Cerrar sesion", destroy_user_session_path, class: "btn waves-effect waves-light ", method: :delete %>
-    <%else%>
-    <li><%= link_to "Iniciar",new_user_session_path ,class: "btn waves-light margen-boton"%></li>    
-    <%end%>
-  </ul>
+                
+              <li><a  class="dropdown-trigger no-autoinit logo-img green-text" data-target='dropdown1'><div class="row middle-xs no-margin"><p class="no-margin"><%=user.primerNombre%></p><%= image_tag "avatar.png", class: "circle avatar-img" %></div></a></li>
+              
+        
+              
+              <%else%>
+              <li><%= link_to "Iniciar",new_user_session_path ,class: "btn waves-light margen-boton"%></li>        
+              <li><%= link_to "Registrarme",new_user_registration_path ,class: "btn waves-light margen-boton"%></li>                
+              <%end%>
+            </ul>
+          </div>
+        </nav>
+      </div>
+      
+      <ul id='dropdown1' class='dropdown-content ' >
+        <%if user.student%>
+                  <li><a href="#!">Material de apoyo</a></li>
+                  
+                <%end%>
+                <%if user.teacher%>
+                  <li><a href="#!">Discipulados</a></li>  
+                  <li><a href="#!">Subir notar</a></li>
+                  
+                <%end%>
+                <%if user.administrator%>
+                  <li><%= link_to  "Discipulados", discipleships_path %></li>                  
+                
+                  <li><a href="#!">Docentes</a></li>
+                  <li><a href="#!">Miembros</a></li>
+                  <li><a href="#!">Grupos comunitarios</a></li>
+                  
+                  
+                  
+                <%end%>
+        <li class="divider" tabindex="-1"></li>
+        <li><a href="#!">Editar perfil</a></li>
+        
+        <li><%=link_to "Cerrar sesion", destroy_user_session_path,  method: :delete %></li>
+        
+      </ul>
+      
+    </header>
+
+  <ul class="sidenav no-autoinit" id="mobile-demo">
+        <br>
+        <%if user_signed_in?%>
+        <li class="center-xs"><%= image_tag "avatar.png", class: "circle logo-img" %></li>
+        <%end%>
+        <li><a href="sass.html">sobre nosostros</a></li>
+        <li><a href="badges.html">opcion2</a></li>
+        <li><a href="collapsible.html">opcion3</a></li>
+        <li><a class="green-text">Iniciar sesion </a></li>   
+        
+        <%if user_signed_in?%>  
+        <%=link_to "Cerrar sesion", destroy_user_session_path, class: "btn waves-effect waves-light ", method: :delete %>
+        <%= image_tag "avatar.png", class: "circle logo-img" %>  
+        
+        <%else%>
+        <li><%= link_to "Iniciar",new_user_session_path ,{class: "btn waves-light margen-boton",id:"iniciar"}%></li>    
+        <%end%>
+      </ul>
   
     <%= yield %>
     
-    
+    <script>
+    $(document).ready(function(){
+    $('.sidenav').sidenav();
+  });
+    </script>
     <script type="text/javascript">
       <%if !notice.nil?%>
         M.toast({html: "<%= notice %>",displayLength: 4000});
@@ -60,9 +100,13 @@
       <%if !alert.nil?%>
         M.toast({html: "<%= alert %>",displayLength: 4000});
       <%end%>
-     $(document).ready(function(){
-  M.AutoInit();
-});
+      
+      $("#abrir").on( "click", function() {
+        
+        });
+
+         $(".dropdown-trigger").dropdown({ hover: false, constrainWidth: false,coverTrigger: false });
+        
     </script>
   </body>
   
